# assembled

./: .gitignore  DEV_README.md  Dockerfile  LICENSE  README.md  example_crawler_cc18.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
assembled/: benchmaker.py  ensemble_evaluation.py  metatask.py  requirements.txt
assembled/compatibility/: faked_classifier.py
assembled/utils/: data_mgmt.py  isolation.py  logger.py  preprocessing.py
assembledevaler/: benchmark_evaluation.py  evaler.py  ploter.py  resulter.py
assembledopenml/: metaflow.py  metatask.py  openml_assembler.py  openml_crawler.py  requirements.txt
assembledopenml/compatability/: faked_classifier.py  openml_metrics.py
assembledopenml/compatibility/: faked_classifier.py  openml_metrics.py
assembledopenml/util/: common.py  data_fetching.py
docs/: api.rst  api_openml.rst  api_openml_utils.rst  api_utils.rst  conf.py  index.md
ensemble_techniques/: README.md  collect_ensemble_techniques.py  requirements.txt
ensemble_techniques/autosklearn/: ensemble_selection.py
ensemble_techniques/custom/: baselines.py  cas_boost_ensemble_selection.py  ds_epm.py
ensemble_techniques/sklearn/: stacking.py  voting.py
ensemble_techniques/util/: metrics.py
ensemble_techniques/wrapper/: abstract_dynamic_selector.py  abstract_ensemble.py
evaluation/: README.md  benchmark_evaluation.py  evaluation_helpers.py  metatasks_overview.py
example_algorithms/: baselines.py  ensembles.py
examples/: README.md  example_cc18.py  example_crawler.py  example_crawler_cc18.py  example_evaluation_and_analysis.py  example_manual_metatask.py  example_manual_metatask_with_validation_data.py  example_openml_cc18.py  example_rebuild_benchmark_data.py  example_run_benchmark.py  new_example_run_benchmark.py
examples/manual_data/: example_manual_metatask.py  example_manual_metatask_with_validation_data.py  example_manual_metatasks.py  example_use_benchmaker.py
examples/openml_data/: example_openml_cc18.py  example_rebuild_openml_benchmark.py
experiments/: bad_predictors_check.py  benchmark_set_search.py  data_utils.py
experiments/assembled-ask/: Dockerfile  README.md  example_ask_eval.py  example_ask_metatask.py  requirements.txt
experiments/assembledevaler/: README.md  evaler.py  ploter.py  requirements.txt  resulter.py
experiments/base_model_runtime_test/: Dockerfile  runtime_test.py  tmp_requirements.txt
experiments/fake_base_models/: faked_classifier_test.py
experiments/metatask_postprocessing/: bad_predictors_check.py  benchmark_set_search.py  (+2 more)
metatasks/: README.md
results/: data_utils.py
test/: assembled_metatask_util.py
tests/: assembled_metatask_util.py
(+95 files in other folders)
