[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assembled"
version = "0.0.3"
authors = [
    { name = "Lennart Purucker", email = "lennart.purucker@uni-siegen.de" },
]
description = "Efficiently Benchmarking Ensembles in AutoML"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy~=1.22.3",
    "pandas~=1.4.1",
    "scikit-learn~=1.0.2",
    "scipy~=1.8.0",
    "tables~=3.7.0",
]

[project.urls]
"Homepage" = "https://github.com/ISG-Siegen/assembled"
"Bug Tracker" = "https://github.com/ISG-Siegen/assembled/issues"

[tool.setuptools]
packages = ["assembled", "assembled.compatibility", "assembled.utils",
    "assembledopenml", "assembledopenml.util"]

[project.optional-dependencies]
test = [
    "pre-commit==2.15.0",
    "pytest==6.2.5",
]
openml = [
    "openml~=0.12.2",
    "requests~=2.27.1",
]
