[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assembled"
version = "0.0.4"
authors = [
    { name = "Lennart Purucker", email = "lennart.purucker@uni-siegen.de" },
]
description = "Efficiently Benchmarking Ensembles in AutoML"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy~=1.22.3",
    "pandas~=1.4.1",
    "scikit-learn~=1.0.2",
    "scipy~=1.8.0",
    "tables~=3.7.0",
]

[project.urls]
"Homepage" = "https://github.com/ISG-Siegen/assembled"
"Bug Tracker" = "https://github.com/ISG-Siegen/assembled/issues"

[tool.setuptools]
packages = ["assembled", "assembled.compatibility", "assembled.utils",
    "assembledopenml", "assembledopenml.util"]

[project.optional-dependencies]
dev = [
    # Test and Pre-commit
    "pre-commit==2.15.0",
    "pytest==6.2.5",

    # Other
    "build",
    "wheel==0.36.2",
    "twine==1.14.0",
]
docs = [
    # Documentation
    "Sphinx==5.3.0",
    "sphinx-material==0.0.35",
    "sphinx-autobuild==2021.3.14",
    "sphinx-copybutton==0.5.1",
    "sphinx-toolbox==3.4.0",
    "sphinx-autodoc-typehints==1.22",
    "sphinx-codeautolink==0.14.1",
    "myst-parser==0.18.1",
    # The following is needed as we build both docs as the same time
    "openml~=0.12.2",
    "requests~=2.27.1",]
openml = [
    "openml~=0.12.2",
    "requests~=2.27.1",
]
